# Streamline

./: Cargo.toml  README.md
.github/workflows/: build.yml
docs/: DESIGN.md
src/: lib.rs  main.rs
src/api/: ingestion.rs  mod.rs
tests/: ingestion.rs
