[package]
name = "streamline"
version = "0.1.0"
edition = "2024"

[lib]
name = "streamline"
path = "src/lib.rs"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tantivy = "0.25.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
zstd = "0.13.3"
